# collisionsdemo

./: .gitignore  CMakeLists.txt  HeightMap.kdev4  README.md
cmake/Modules/: FindGLFW.cmake
glload/: CMakeLists.txt  gll_gl_ext.c  glxl_ext.c  wgll_ext.c
include/config/: globals.hpp
include/heightmap/: heightmapgenerator.hpp
include/modelloader/: objlexer.hpp  vertexbuffer.hpp  vertexbufferfactory.hpp
include/objectloader/: objLoader.h  obj_parser.h
include/render/: colourinformationuniform.hpp  lightmanager.hpp  shaderfactory.hpp  shaderpipeline.hpp  sources.hpp  vertexbufferfactory.hpp
include/scene/: SceneItem.hpp  gravitationalobject.hpp  perspectivecamera.hpp  scenegroup.hpp  sceneitem.hpp  scenemanager.hpp  universalgravitation.hpp  world.hpp
include/scene/collisiondetection/: AxisAlignedBoundingCuboid.hpp  BoundingSphere.hpp  CollisionDetector.hpp  axisalignedboundingcuboid.hpp  boundingsphere.hpp  boundingvolume.hpp  collisiondetector.hpp
include/sceneitems/: genericplanet.hpp  planet.hpp  star.hpp  terrain.hpp
include/util/: comparison.hpp  hash.hpp
objectloader/: CMakeLists.txt  list.cpp  objLoader.cpp  obj_parser.cpp  string_extra.cpp
shaders/: Fragment-Colour Height.glsl  Fragment-Colour.glsl  Fragment-Phong.glsl  Vertex-Pass Y.glsl  Vertex-Transform-Map Colour.glsl  Vertex-Transform.glsl
src/: CMakeLists.txt  asteroid.cpp  asteroid.hpp  explosion.cpp  explosion.hpp  main.cpp  player.cpp  player.hpp  rocket.cpp  rocket.hpp  tunnelgenerator.cpp  tunnelgenerator.hpp  tunnelsegment.cpp  tunnelsegment.hpp
src/collisiondetection/: CMakeLists.txt  axisalignedboundingbox.cpp  axisalignedboundingbox.hpp  boundingvolume.hpp  collidable.hpp  objectorientedboundingbox.cpp  objectorientedboundingbox.hpp  vclip.cpp  vclip.hpp
src/heightmap/: heightmapgenerator.cpp
src/modelloader/: CMakeLists.txt  objlexer.hpp  objlexer.lex  objparser.yy  vertexbuffer.cpp  vertexbuffer.hpp  vertexbufferfactory.cpp  vertexbufferfactory.hpp
src/render/: .shaderfactory.cpp.kate-swp  colouredphongsceneitem.cpp  colouredphongsceneitem.hpp  lightmanager.cpp  shaderfactory.cpp  shaderpipeline.cpp  shaderpipeline.hpp  sources.cpp  vertexbufferfactory.cpp
src/renderer/: CMakeLists.txt
src/renderer/render/: colouredphongsceneitem.cpp  colouredphongsceneitem.hpp  colourinformationuniform.hpp  hud.cpp  hud.hpp  lightmanager.cpp  lightmanager.hpp  matrixuniform.hpp  shaderfactory.hpp  shaderpipeline.cpp  shaderpipeline.hpp
src/renderer/scene/: gravitationalobject.cpp  gravitationalobject.hpp  perspectivecamera.cpp  perspectivecamera.hpp  scenegroup.cpp  scenegroup.hpp  sceneitem.cpp  sceneitem.hpp  scenemanager.cpp  scenemanager.hpp  universalgravitation.cpp  universalgravitation.hpp
src/renderer/scene/collisiondetection/: axisalignedboundingbox.cpp  axisalignedboundingbox.hpp  axisalignedboundingcuboid.cpp  axisalignedboundingcuboid.hpp  boundingsphere.cpp  boundingsphere.hpp  boundingvolume.hpp  collisiondetector.cpp  collisiondetector.hpp
src/scene/: PerspectiveCamera.cpp  SceneItem.cpp  SceneManager.cpp  gravitationalobject.cpp  gravitationalobject.hpp  perspectivecamera.cpp  scenegroup.cpp  scenegroup.hpp  sceneitem.cpp  sceneitem.hpp  scenemanager.cpp  universalgravitation.cpp  universalgravitation.hpp  world.cpp
src/scene/collisiondetection/: AxisAlignedBoundingCuboid.cpp  BoundingSphere.cpp  axisalignedboundingcuboid.cpp  boundingsphere.cpp  collisiondetector.cpp  collisiondetector.hpp
src/sceneitems/: genericplanet.cpp  planet.cpp  star.cpp  terrain.cpp
